--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+    <h2>My Plans</h2>
+
+    <h3>Shopping List:</h3>
+    <ol>
+        <li data-ns-test="shoppingList">Gadgets</li>
+        <li data-ns-test="shoppingList">Wardrobe Upgrade</li>
+        <li data-ns-test="shoppingList">Books and Learning Materials</li>
+    </ol>
+
+    <h3>Holiday Destinations:</h3>
+    <ul>
+        <li data-ns-test="holidayList">Maldives</li>
+        <li data-ns-test="holidayList">Japan</li>
+        <li data-ns-test="holidayList">New Zealand</li>
+    </ul>	
     <script type="text/javascript" src="./script.js">
 </script>
 
